[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/character.png" type="Texture" id=1]
[ext_resource path="res://stateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/meleeEnemy.gd" type="Script" id=3]
[ext_resource path="res://textures/weapon.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 80 )

[node name="meleeEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.642857, 0.842105 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 48 )
shape = SubResource( 1 )

[node name="stateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="rightRay" type="RayCast2D" parent="."]
position = Vector2( 128, 0 )
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 8

[node name="leftRay" type="RayCast2D" parent="."]
position = Vector2( -128, 0 )
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 8

[node name="Label" type="Label" parent="."]
margin_left = -128.0
margin_top = -240.0
margin_bottom = -194.0
rect_scale = Vector2( 2, 2 )
text = "IDLE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pivot" type="Position2D" parent="."]

[node name="weapon" type="Sprite" parent="pivot"]
position = Vector2( 144, -64 )
scale = Vector2( 0.661616, 0.672043 )
texture = ExtResource( 4 )
